--- a/index.html
+++ b/index.html
@@ -16,78 +16,78 @@
     <h1>Draft <strong>Countdown</strong></h1>
 
     <div class="countdown">
-      <div class="bloc-time hours" data-init-value="24">
+        <div class="bloc-time hours" hours="24">
         <span class="count-title">Hours</span>
-
         <div class="figure hours hours-1">
-          <span class="top">2</span>
+          <span class="top" id="hour-top-left">2</span>
+
           <span class="top-back">
             <span>2</span>
           </span>
-          <span class="bottom">2</span>
+          <span class="bottom" id="hour-bottom-left">2</span>
           <span class="bottom-back">
             <span>2</span>
           </span>
         </div>
 
         <div class="figure hours hours-2">
-          <span class="top">4</span>
+          <span class="top" id="hour-top-right">4</span>
           <span class="top-back">
             <span>4</span>
           </span>
-          <span class="bottom">4</span>
+          <span class="bottom" id="hour-bottom-right">4</span>
           <span class="bottom-back">
             <span>4</span>
           </span>
         </div>
       </div>
 
-      <div class="bloc-time min" data-init-value="0">
+        <div class="bloc-time min" minutes="0">
         <span class="count-title">Minutes</span>
 
         <div class="figure min min-1">
-          <span class="top">0</span>
+          <span class="top" id="minute-top-left">0</span>
           <span class="top-back">
             <span>0</span>
           </span>
-          <span class="bottom">0</span>
+          <span class="bottom" id="minute-bottom-left">0</span>
           <span class="bottom-back">
             <span>0</span>
           </span>
         </div>
 
         <div class="figure min min-2">
-          <span class="top">0</span>
+          <span class="top" id="minute-top-right">0</span>
           <span class="top-back">
             <span>0</span>
           </span>
-          <span class="bottom">0</span>
+          <span class="bottom" id="minute-bottom-right">0</span>
           <span class="bottom-back">
             <span>0</span>
           </span>
         </div>
       </div>
 
-      <div class="bloc-time sec" data-init-value="0">
+        <div class="bloc-time sec" seconds="0">
         <span class="count-title">Seconds</span>
 
         <div class="figure sec sec-1">
-          <span class="top">0</span>
+          <span class="top" id="second-top-left">0</span>
           <span class="top-back">
             <span>0</span>
           </span>
-          <span class="bottom">0</span>
+          <span class="bottom" id="second-bottom-left">0</span>
           <span class="bottom-back">
             <span>0</span>
           </span>
         </div>
 
         <div class="figure sec sec-2">
-          <span class="top">0</span>
+          <span class="top" id="second-top-right">0</span>
           <span class="top-back">
             <span>0</span>
           </span>
-          <span class="bottom">0</span>
+          <span class="bottom" id="second-bottom-right">0</span>
           <span class="bottom-back">
             <span>0</span>
           </span>
@@ -100,7 +100,32 @@
     <button class="start">START</button>
     <button class="pause">PAUSE</button>
     <button class="edit">EDIT</button>
+    <button type="reset" class="reset">RESET</button>
   </div>
+
+
+  <div class="overlay"></div>
+
+  <div class="modal">
+    <div>
+      <p>HOURS</p>
+      <input class="input-hours" type="number" placeholder="hours..." />
+    </div>
+    <div>
+      <p>MINUTES</p>
+      <input class="input-minutes" type="number" placeholder="minutes..." />
+    </div>
+    <div>
+      <p>SECONDS</p>
+      <input class="input-seconds" type="number" placeholder="seconds..." />
+    </div>
+    <div>
+      <button type="submit" class="confirm">CONFIRM</button>
+      <button class="cancel">CANCEL</button>
+    </div>
+  </div>
+
+
   <script type="module" src="code/scripts.js"></script>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
